Update old website

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@ body, html {
 	 Recordings of my talks on this work can be found <a href="https://youtu.be/0elW07Wh8j0">here</a> and <a href="https://www.youtube.com/watch?v=mg-iPbgu9Lc">here</a>. 
 </div>
 
-<div id="Teaching" class="tabcontent">
+
+
+<!--<div id="Teaching" class="tabcontent">
   <h3>Courses taught (with links to evaluations where available):</h3>
   <ul>
   <li><h4>Math 477: Mathematical Theory of Probability. Teaching Assistant. Spring 2021. </h4></li>
@@ -96,9 +98,9 @@ body, html {
 <!--<HR>
 <h3><a href="teaching/Teaching_Statement.pdf">Teaching Statement</a></h3>-->
 
-</div>
+</div>-->
 
-<div id="Service" class="tabcontent">
+<!--<div id="Service" class="tabcontent">
 
 	<a href="https://sites.math.rutgers.edu/~sz446/GARTS/"><h3>Graduate Algebra and Representation Theory Seminar (GARTS)</h3></a>
 	
@@ -113,7 +115,7 @@ body, html {
 	
 	
 	<hr />
-</div>
+</div>-->
 
 <script>
 function openPage(pageName,elmnt,color) {
