--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, html {
   cursor: pointer;
   padding: 14px 16px;
   font-size: 17px;
-  width: 33.3333333%;
+  width: 50%;
 }
 
 .tablink:hover {
@@ -40,7 +40,6 @@ body, html {
 
 #Research {background-color: white;}
 #Teaching {background-color: white;}
-#Service {background-color: white;}
 </style>
 </head>
 <body>
@@ -48,24 +47,47 @@ body, html {
 
 <button class="tablink" onclick="openPage('Research', this, 'white')" id="defaultOpen">Research</button>
 <button class="tablink" onclick="openPage('Teaching', this, 'white')">Teaching</button>
-<button class="tablink" onclick="openPage('Service', this, 'white')">Service</button>
+<!--<button class="tablink" onclick="openPage('Service', this, 'white')">Service</button>-->
 
 <div id="Research" class="tabcontent">
 <h1>Jason Saied</h1>
 
 	<HR>
 
-	I am a Research Computer Scientist at NASA Ames Research Center. I work on quantum computing with the Quantum Artificial Intelligence Laboratory (QuAIL). <br>
-	Email: <a href="mailto:jason.saied@nasa.gov">jason.saied@nasa.gov</a>. 
-	<HR>
+	I am a Research Computer Scientist with the <a href="https://www.nasa.gov/intelligent-systems-division/discovery-and-systems-health/nasa-quail/">Quantum Artificial Intelligence Laboratory (QuAIL)</a> at NASA Ames Research Center. Broadly, my research focuses on modeling, mitigation, and correction of errors in quantum computation, especially linear optical approaches. <br><br>
+	I got my PhD in Mathematics at Rutgers University&mdash;New Brunswick, advised by <a href="https://sites.math.rutgers.edu/~sahi/">Siddhartha Sahi</a>. My mathematics research focused on representation theory and algebraic combinatorics, tools which I now actively use in studying quantum information. <br><br>
+	Email: <a href="mailto:jasonsaied@gmail.com">jasonsaied@gmail.com</a>
 
-	PhD obtained in May 2022 <br>
-	Rutgers University&mdash;New Brunswick<br>
-	Advisor: <a href="https://sites.math.rutgers.edu/~sahi/">Siddhartha Sahi</a>
+	
+	
+	<HR>
+	
+	<h2>Highlighted Papers</h2>
+	<ul>
+	
+	<li> J. Saied, J. Marshall, N. Anand, and E. G. Rieffel. "<b><a href="https://doi.org/10.1103/PhysRevApplied.23.034079">General protocols for the efficient distillation of indistinguishable photons</a></b>." Physical Review Applied 23, no. 3 (2025): 034079. </li>
+	<ul><li><a href="https://arxiv.org/abs/2404.14217">arXiv version</a></li></ul>
+	<ul><li>Also see this <a href="https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.23.044003">related work</a> by F. H. B. Somhorst et al. and the corresponding <a href="https://phys.org/news/2025-04-error-method-photon-requirements-quantum.html">press release</a>. </li></ul>
+	
+	<li> J. Saied, J. Marshall, N. Anand, S. Grabbe, and E. G. Rieffel. "<b><a href="https://doi.org/10.1117/12.3023843">Advancing quantum networking: some tools and protocols for ideal and noisy photonic systems</a></b>." In Quantum Computing, Communication, and Simulation IV, vol. 12911, pp. 37-65. SPIE, 2024. </li>
+	<ul><li><a href="https://arxiv.org/abs/2403.02515">arXiv version</a></li></ul>
+	
+	<li> N. Suri, J. Saied, and D. Venturelli. "<b><a href="https://doi.org/10.1103/PhysRevA.110.042621">Uniformly decaying subspaces for error-mitigated quantum computation</a></b>." Physical Review A 110, no. 4 (2024): 042621. </li>
+	<ul><li><a href="https://arxiv.org/abs/2403.00163">arXiv version</a></li></ul>
+	
+	<li> J. Saied. "<b><a href="https://doi.org/10.1016/j.aim.2022.108440">A combinatorial formula for Sahi, Stokman, and Venkateswaran's generalization of Macdonald polynomials</a></b>." Advances in Mathematics 404 (2022): 108440. </li>
+	<ul><li><a href="https://arxiv.org/abs/2006.15086">arXiv version</a></li></ul>
+	<ul><li>Recordings of my talks on this work can be found <a href="https://youtu.be/0elW07Wh8j0">here</a> and <a href="https://www.youtube.com/watch?v=mg-iPbgu9Lc">here</a>.</li></ul>
+	
+	<li> J. Saied. "<b><a href="https://doi.org/10.1090/conm/815/16318">A Littlewood-Richardson rule for SSV polynomials</a></b>," in <i>Macdonald Theory and Beyond</i>, Contemporary Mathematics, vol. 815, Amer. Math. Soc., Providence, RI, 2025, pp. 135-159.</li>
+	
+	
+	</ul>
+	
 	
 	<HR>
 
-  <h2>Research Interests</h2>
+  <!--<h2>Research Interests</h2>
   My current research interests are in quantum computing. A more detailed description will be coming soon. 
   
   <br><br>My thesis was in algebraic combinatorics and representation theory. For a more detailed description, see <a href="Research Statement.pdf">my academic research statement</a>. 
@@ -76,11 +98,11 @@ body, html {
 	 Here is the <a href="https://arxiv.org/abs/2006.15086">arXiv version</a> (not fully updated). 
 	 
 	 Recordings of my talks on this work can be found <a href="https://youtu.be/0elW07Wh8j0">here</a> and <a href="https://www.youtube.com/watch?v=mg-iPbgu9Lc">here</a>. 
-</div>
+</div>-->
 
 
 
-<!--<div id="Teaching" class="tabcontent">
+<div id="Teaching" class="tabcontent">
   <h3>Courses taught (with links to evaluations where available):</h3>
   <ul>
   <li><h4>Math 477: Mathematical Theory of Probability. Teaching Assistant. Spring 2021. </h4></li>
@@ -98,7 +120,7 @@ body, html {
 <!--<HR>
 <h3><a href="teaching/Teaching_Statement.pdf">Teaching Statement</a></h3>-->
 
-</div>-->
+</div>
 
 <!--<div id="Service" class="tabcontent">
 
