--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body, html {
 
 	<HR>
 
-	I am a Research Computer Scientist with the <a href="https://www.nasa.gov/intelligent-systems-division/discovery-and-systems-health/nasa-quail/">Quantum Artificial Intelligence Laboratory (QuAIL)</a> at NASA Ames Research Center. Broadly, my research focuses on modeling, mitigation, and correction of errors in quantum computation, especially linear optical approaches. <br><br>
+	My research focuses on modeling, mitigation, and correction of errors in quantum computation, especially linear optical approaches. <br><br>
 	I got my PhD in Mathematics at Rutgers University&mdash;New Brunswick, advised by <a href="https://sites.math.rutgers.edu/~sahi/">Siddhartha Sahi</a>. My mathematics research focused on representation theory and algebraic combinatorics, tools which I now actively use in studying quantum information. <br><br>
 	Email: <a href="mailto:jasonsaied@gmail.com">jasonsaied@gmail.com</a>
 
@@ -67,7 +67,7 @@ body, html {
 	
 	<li> J. Saied, J. Marshall, N. Anand, and E. G. Rieffel. "<b><a href="https://doi.org/10.1103/PhysRevApplied.23.034079">General protocols for the efficient distillation of indistinguishable photons</a></b>." Physical Review Applied 23, no. 3 (2025): 034079. </li>
 	<ul><li><a href="https://arxiv.org/abs/2404.14217">arXiv version</a></li></ul>
-	<ul><li>Also see this <a href="https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.23.044003">related work</a> by F. H. B. Somhorst et al. and the corresponding <a href="https://phys.org/news/2025-04-error-method-photon-requirements-quantum.html">press release</a>. </li></ul>
+	<ul><li>Also see this <a href="https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.23.044003">related work</a> by F. H. B. Somhorst et al. and the corresponding <a href="https://www.utwente.nl/en/news/2025/4/247257/invention-from-twente-brings-quantum-computer-closer">press release</a>. </li></ul>
 	
 	<li> J. Saied, J. Marshall, N. Anand, S. Grabbe, and E. G. Rieffel. "<b><a href="https://doi.org/10.1117/12.3023843">Advancing quantum networking: some tools and protocols for ideal and noisy photonic systems</a></b>." In Quantum Computing, Communication, and Simulation IV, vol. 12911, pp. 37-65. SPIE, 2024. </li>
 	<ul><li><a href="https://arxiv.org/abs/2403.02515">arXiv version</a></li></ul>
