--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ body, html {
 	 
 	 Here is the <a href="https://arxiv.org/abs/2006.15086">arXiv version</a> (not fully updated). 
 	 
-	 Recordings of my talks on this work can be found <a href="https://youtu.be/0elW07Wh8j0">here</a> and <a href="https://www.youtube.com/watch?v=mg-iPbgu9Lc">here</a>. 
-</div>-->
+	 Recordings of my talks on this work can be found <a href="https://youtu.be/0elW07Wh8j0">here</a> and <a href="https://www.youtube.com/watch?v=mg-iPbgu9Lc">here</a>. -->
+</div>
 
 
 
@@ -119,7 +119,6 @@ body, html {
 </ul>
 <!--<HR>
 <h3><a href="teaching/Teaching_Statement.pdf">Teaching Statement</a></h3>-->
-
 </div>
 
 <!--<div id="Service" class="tabcontent">
